[package]
name = "scan-media"
version = "0.1.0"
authors = ["ameba23 <ameba23@systemli.org>"]
edition = "2018"

[dependencies]
async-fs = "1.5.0"
async-std = "1.9.0"
async-std-utp = "0.1.1"
async-walkdir = "0.2.0"
bincode = "1.3.3"
blake2 = "0.9.1"
futures-lite = "1.11.3"
hmac-sha256 = "0.1.7"
hypercore = "0.11.0"
serde = { version = "1.0.126", features = ["derive"] }
sled = "0.34.6"
