[package]
name = "scan-media"
description = "The beginnings of a rust version of harddrive-party"
version = "0.1.0"
authors = ["ameba23 <ameba23@systemli.org>"]
license = "GPL-3.0-or-later"
keywords = ["p2p"]
edition = "2018"

[dependencies]
async-fs = "1.5.0"
async-std = "1.9.0"
async-std-utp = "0.1.1"
async-walkdir = "0.2.0"
bincode = "1.3.3"
blake2 = "0.9.1"
futures-lite = "1.11.3"
hmac-sha256 = "0.1.7"
hypercore = { git = "https://github.com/datrs/hypercore", branch="master"}
random-access-disk = "2.0.0"
serde = { version = "1.0.126", features = ["derive"] }
sled = "0.34.6"

[dev-dependencies]
tempfile = "3.2.0"
